@@ -252,3 +252,4 @@
  25-Jun-2020  V0.996 Adding schema validation to automatically follow on from any load failures in mongo/PdbxLoader()
  25-Jun-2020  V0.997 Update dependencies
  30-Jun-2020  V0.998 Add partial reload of failed object salvage path
+ 10-Jul-2020  V0.999 Adding support for derivative branched entity methods
